<resources>
    <string name="app_name">News app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved">Saved</string>
    <string name="trending_news">Trending News</string>
    <string name="title">Title</string>
    <string name="this_is_a_description">This is a description</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="auto_read">Auto-Read</string>
    <string name="read_news_for_me">Read news for me</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="search">Search</string>
    <string name="read">Read</string>
</resources>