<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Auto Read">
        <SwitchPreferenceCompat
            app:key="auto_read"
            app:title="@string/auto_read"
            app:summary="@string/read_news_for_me"
            app:defaultValue="false"/>
        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="Dark Mode"
            app:summaryOn="Turn off dark mode"
            app:summaryOff="Turn on dark mode"
            app:defaultValue="false"/>

        <ListPreference
            app:defaultValue="in"
            app:entries="@array/country_entries"
            app:entryValues="@array/country_values"
            app:key="country_code"
            app:title="Country"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>