<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/line1"
            android:enabled="false"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_trending"
            android:title="@string/trending_news"
            android:icon="@drawable/ic_trending"
            android:padding="@dimen/_10dp" />

        <item
            android:id="@+id/nav_sports"
            android:title="@string/sports"
            android:icon="@drawable/ic_sports"
            android:padding="@dimen/_10dp" />

        <item
            android:id="@+id/nav_technology"
            android:title="@string/technology"
            android:icon="@drawable/ic_technology"
            android:padding="@dimen/_10dp" />

        <item
            android:id="@+id/nav_business"
            android:title="@string/business"
            android:icon="@drawable/ic_business"
            android:padding="@dimen/_10dp" />

        <item
            android:id="@+id/nav_health"
            android:title="@string/health"
            android:icon="@drawable/ic_health"
            android:padding="@dimen/_10dp" />



    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/blank1"
            android:enabled="false"
            android:title=""
        />
        <item
            android:id="@+id/header_title"
            android:enabled="false"
            android:title="@string/offline_news" />
        <item
            android:id="@+id/nav_saved"
            android:title="@string/saved"
            android:icon="@drawable/ic_save"
            android:padding="@dimen/_10dp" />

    </group>

    <group>
        <item
            android:id="@+id/blank2"
            android:enabled="false"
            android:title=""
            />
        <item
            android:id="@+id/preferences_header"
            android:enabled="false"
            android:title="@string/settings" />
        <item
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"
            android:id="@+id/nav_settings"
            android:padding="@dimen/_10dp"
            />
    </group>

</menu>


